--- a/components/formats-common/build.properties
+++ b/components/formats-common/build.properties
@@ -15,7 +15,8 @@ component.classpath      = ${lib.dir}/jgoodies-forms-1.7.2.jar:\
                            ${lib.dir}/logback-classic-${logback.version}.jar:\
                            ${lib.dir}/logback-core-${logback.version}.jar:\
                            ${lib.dir}/slf4j-api-${slf4j.version}.jar:\
-                           ${lib.dir}/testng-6.8.jar
+                           ${lib.dir}/testng-6.8.jar:\
+                           ${lib.dir}/hadoop-core-1.2.1.jar
 component.java-version   = 1.6
 component.deprecation    = true
 
@@ -29,6 +30,7 @@ component.main-class     = loci.formats.gui.ImageViewer
 component.runtime-cp     = ${component.classpath}:\
                            ${lib.dir}/logback-classic-${logback.version}.jar:\
                            ${lib.dir}/logback-core-${logback.version}.jar:\
-                           ${lib.dir}/slf4j-api-${slf4j.version}.jar
+                           ${lib.dir}/slf4j-api-${slf4j.version}.jar:\
+                           ${lib.dir}/hadoop-core-1.2.1.jar
 
 testng.xml.template      = ${test.dir}/loci/common/utests/testng-template.xml
