--- a/ant/toplevel.properties
+++ b/ant/toplevel.properties
@@ -69,7 +69,7 @@ package.libraries = formats-api.jar \
                   specification.jar \
                   turbojpeg.jar \
                   xalan-2.7.1.jar \
-                  xercesImpl-2.6.2.jar \
+                  xercesImpl.jar \
                   slf4j-api-${slf4j.version}.jar \
                   logback-classic-${logback.version}.jar \
                   logback-core-${logback.version}.jar \
@@ -105,7 +105,7 @@ loci-tools.libraries = formats-api.jar \
                        specification.jar \
                        turbojpeg.jar \
                        xalan-2.7.1.jar \
-                       xercesImpl-2.6.2.jar \
+                       xercesImpl.jar \
                        slf4j-api-${slf4j.version}.jar \
                        slf4j-log4j12-${slf4j.version}.jar \
                        log4j-${log4j.version}.jar \
