--- a/components/specification/build.properties
+++ b/components/specification/build.properties
@@ -8,7 +8,8 @@ component.version        = ${release.version}
 component.classpath      = ${artifact.dir}/specification.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${lib.dir}/joda-time-2.2.jar:\
-                           ${lib.dir}/xercesImpl.jar:\
+                           ${lib.dir}/xercesImpl-2.11.0.jar:\
+                           ${lib.dir}/xml-apis-1.4.01.jar:\
                            ${lib.dir}/slf4j-api-${slf4j.version}.jar
 
 component.java-version   = 1.6
