--- a/components/formats-common/build.properties
+++ b/components/formats-common/build.properties
@@ -31,6 +31,9 @@ component.runtime-cp     = ${component.classpath}:\
                            ${lib.dir}/logback-classic-${logback.version}.jar:\
                            ${lib.dir}/logback-core-${logback.version}.jar:\
                            ${lib.dir}/slf4j-api-${slf4j.version}.jar:\
-                           ${lib.dir}/hadoop-core-1.2.1.jar
+                           ${lib.dir}/hadoop-core-1.2.1.jar:\
+                           ${lib.dir}/commons-logging.jar:\
+                           ${lib.dir}/commons-configuration-1.10.jar:\
+                           ${lib.dir}/commons-lang-2.6.jar
 
 testng.xml.template      = ${test.dir}/loci/common/utests/testng-template.xml
