--- a/components/formats-common/build.properties
+++ b/components/formats-common/build.properties
@@ -16,7 +16,7 @@ component.classpath      = ${lib.dir}/jgoodies-forms-1.7.2.jar:\
                            ${lib.dir}/logback-core-${logback.version}.jar:\
                            ${lib.dir}/slf4j-api-${slf4j.version}.jar:\
                            ${lib.dir}/testng-${testng.version}.jar:\
-                           ${lib.dir}/hadoop-core-1.2.1.jar
+                           ${lib.dir}/hadoop-core-${hadoop.version}.jar
 component.java-version   = 1.6
 component.deprecation    = true
 
@@ -31,7 +31,7 @@ component.runtime-cp     = ${component.classpath}:\
                            ${lib.dir}/logback-classic-${logback.version}.jar:\
                            ${lib.dir}/logback-core-${logback.version}.jar:\
                            ${lib.dir}/slf4j-api-${slf4j.version}.jar:\
-                           ${lib.dir}/hadoop-core-1.2.1.jar:\
+                           ${lib.dir}/hadoop-core-${hadoop.version}.jar:\
                            ${lib.dir}/commons-logging.jar:\
                            ${lib.dir}/commons-configuration-1.10.jar:\
                            ${lib.dir}/commons-lang-2.6.jar
