--- a/components/formats-common/pom.xml
+++ b/components/formats-common/pom.xml
@@ -45,7 +45,7 @@
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-core</artifactId>
-      <version>1.2.1</version>
+      <version>${hadoop.version}</version>
     </dependency>
 
     <!-- NB: dependency:analyze has false warning about xml-apis:xml-apis. -->
