ant: fixed runtime dependencies

--- a/components/formats-common/build.properties
+++ b/components/formats-common/build.properties
@@ -32,8 +32,11 @@ component.runtime-cp     = ${component.classpath}:\
                            ${lib.dir}/logback-core-${logback.version}.jar:\
                            ${lib.dir}/slf4j-api-${slf4j.version}.jar:\
                            ${lib.dir}/hadoop-common-${hadoop.version}.jar:\
+                           ${lib.dir}/hadoop-auth-${hadoop.version}.jar:\
                            ${lib.dir}/commons-logging.jar:\
                            ${lib.dir}/commons-configuration-1.10.jar:\
-                           ${lib.dir}/commons-lang-2.6.jar
+                           ${lib.dir}/commons-lang-2.6.jar:\
+                           ${lib.dir}/commons-collections-3.2.1.jar:\
+                           ${lib.dir}/guava-${guava.version}.jar
 
 testng.xml.template      = ${test.dir}/loci/common/utests/testng-template.xml
