--- a/components/formats-common/build.properties
+++ b/components/formats-common/build.properties
@@ -33,10 +33,14 @@ component.runtime-cp     = ${component.classpath}:\
                            ${lib.dir}/slf4j-api-${slf4j.version}.jar:\
                            ${lib.dir}/hadoop-common-${hadoop.version}.jar:\
                            ${lib.dir}/hadoop-auth-${hadoop.version}.jar:\
+                           ${lib.dir}/hadoop-hdfs-${hadoop.version}.jar:\
                            ${lib.dir}/commons-logging.jar:\
                            ${lib.dir}/commons-configuration-1.10.jar:\
                            ${lib.dir}/commons-lang-2.6.jar:\
                            ${lib.dir}/commons-collections-3.2.1.jar:\
-                           ${lib.dir}/guava-${guava.version}.jar
+                           ${lib.dir}/commons-cli-1.2.jar:\
+                           ${lib.dir}/guava-${guava.version}.jar:\
+                           ${lib.dir}/protobuf-java-2.5.0.jar:\
+                           ${lib.dir}/htrace-core-3.0.4.jar:\
 
 testng.xml.template      = ${test.dir}/loci/common/utests/testng-template.xml
